background position mobile contact fixed

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -304,6 +304,8 @@ footer p {
     .contenedor-contacto .contacto1 {
         grid-column: 1/2;
         grid-row: 1/2;
+        background-position: center;
+
     }
     .contenedor-contacto .contacto2{
         grid-column: 1/2;
